fix why books on mobile

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -689,9 +689,7 @@ cite p {color:white;}
 
 .twenty-pad {padding-top:20px;}
 
-.thirty-pad {
-	padding: 30px;
-    margin-bottom: 30px;}
+.thirty-pad {margin-bottom: 30px;}
 
 .fifty-pad {margin-top: 50px;}
 
